--- a/resources/scss/_about_screen.scss
+++ b/resources/scss/_about_screen.scss
@@ -89,6 +89,13 @@
                 align-items: center;
                 font-size: 21px;
                 color: #ffffff;
+
+                @media screen and (max-width: 768px) {
+                    width: 75px;
+                    min-width: 75px;
+                    height: 75px;
+                    min-height: 75px;
+                }
             }
         }
     }
