--- a/resources/scss/_about_screen.scss
+++ b/resources/scss/_about_screen.scss
@@ -1,9 +1,15 @@
 .about-screen {
     .introduction-title {
-        font-size: 25px;
+        font-size: 32px;
     }
     .introduction-description {
-        font-size: 17px;
+        font-size: 24px;
+        &.max-width-70 {
+            max-width: 70%;
+            @media screen and (max-width: 768px) {
+                max-width: 100%;
+            }
+        }
     }
     .breadcrumb {
         background-color: #5f27cd;
@@ -17,29 +23,39 @@
     }
     .about-screen-container {
         background-color: rgba(95, 39, 205, 0.15);
-        .about-screen-image-relate {
-            max-width: 700px;
-            @media screen and (max-width: 576px) {
-                max-width: 100%;
+        .about-screen-image-cover {
+            width: 75%;
+            min-height: 380px !important;
+            max-height: 380px !important;
+            object-fit: cover;
+            object-position: center;
+            @media screen and (max-width: 768px) {
                 width: 100%;
+                min-height: 350px !important;
+                max-height: 350px !important;
             }
-            .content-top-right {
-                top: 35px;
-                right: -235px;
-                @media screen and (max-width: 1024px) {
-                    right: -10px;
-                }
-                @media screen and (max-width: 576px) {
-                    right: inherit;
-                }
-                .about-screen-text-container {
-                    background-color: #009432;
-                    max-width: 320px;
-                }
+        }
+        .content-top-right {
+            top: 35px;
+            right: 0;
+            @media screen and (max-width: 768px) {
+                margin-top: 20px;
+                position: static !important;
+                right: inherit;
+            }
+            .about-screen-text-container {
+                background-color: #009432;
+                max-width: 520px;
             }
         }
         .about-img {
-            max-height: 450px;
+            width: 100%;
+            max-height: 650px;
+            min-height: 650px;
+            background-size: cover;
+            background-position: center;
+            object-position: center;
+            object-fit: cover;
         }
     }
     .about-screen-governance {
@@ -48,7 +64,7 @@
             font-size: 15px;
         }
         .governance-title {
-            font-size: 35px;
+            font-size: 32px;
             @media screen and (max-width: 991px) {
                 font-size: 25px;
             }
@@ -57,38 +73,35 @@
             color: #009432;
         }
         .governance-description {
-            font-size: 17px;
-        }
-        .small-text {
-            font-size: 13px;
+            font-size: 24px;
         }
         .governance-box-title {
-            font-size: 21px;
+            font-size: 32px;
             color: #009432;
             font-weight: 600;
         }
         .governance-box-description {
-            font-size: 14px;
+            font-size: 24px;
         }
         .governance-box-container {
             background-color: #009432;
             .governance-box-text {
-                font-size: 30px;
+                font-size: 32px;
             }
             .governance-box-description {
-                font-size: 20px;
+                font-size: 24px;
             }
             .trusted-company {
-                width: 120px;
-                min-width: 120px;
-                height: 120px;
-                min-height: 120px;
-                background-color: #5f27cd;
+                width: 95px;
+                min-width: 95px;
+                height: 95px;
+                min-height: 95px;
+                background-color: #ffffff;
                 display: flex;
                 justify-content: center;
                 align-items: center;
                 font-size: 21px;
-                color: #ffffff;
+                color: #000000;
 
                 @media screen and (max-width: 768px) {
                     width: 75px;
