--- a/resources/scss/_about_screen.scss
+++ b/resources/scss/_about_screen.scss
@@ -11,22 +11,18 @@
             }
         }
     }
-    .breadcrumb {
-        background-color: #5f27cd;
-        height: 350px;
-    }
     .about-screen-container {
         background-color: rgba(95, 39, 205, 0.15);
         .about-screen-image-cover {
             width: 75%;
-            min-height: 380px !important;
-            max-height: 380px !important;
-            object-fit: cover;
-            object-position: center;
+            min-height: 470px !important;
+            max-height: 470px !important;
+            object-fit: cover !important;
+            background-size: cover !important;
+            object-position: center !important;
+            background-position: center;
             @media screen and (max-width: 768px) {
                 width: 100%;
-                min-height: 350px !important;
-                max-height: 350px !important;
             }
         }
         .content-top-right {
