--- a/resources/scss/_contact_screen.scss
+++ b/resources/scss/_contact_screen.scss
@@ -105,5 +105,62 @@
                 transition: 0.3s all ease-in-out;
             }
         }
+        .form-checkbox[type=checkbox] {
+            position: relative;
+            border: 2px solid #e3e3e3;
+            border-radius: 4px;
+            background: none;
+            cursor: pointer;
+            line-height: 0;
+            margin: 0 .6em 0 0;
+            outline: 0;
+            padding: 0 !important;
+            vertical-align: text-top;
+            height: 20px;
+            width: 20px;
+            -webkit-appearance: none;
+            opacity: .5;
+            box-shadow: 0 0 0 0 !important;
+
+            &[type=checkbox]:hover {
+                opacity: 1;
+            }
+
+            &[type=checkbox]:checked {
+                border: 2px solid transparent;
+                background-color: #5f27cd;
+                opacity: 1;
+
+                &[type=checkbox]:before {
+                    content: '';
+                    position: absolute;
+                    right: 50%;
+                    top: 50%;
+                    width: 5px;
+                    border: solid #FFF;
+                    height: 8px;
+                    border-width: 0 2px 2px 0;
+                    margin: 0 -1px 0;
+                    transform: rotate(45deg) translate(-50%, -50%);
+                    z-index: 2;
+                }
+
+            }
+
+            &[type=checkbox]:before {
+                content: '';
+                position: absolute;
+                right: 50%;
+                top: 50%;
+                width: 7px;
+                height: 14px;
+                border: transparent;
+                border-width: 0 2px 2px 0;
+                margin: 0 -1px 0;
+                transform: rotate(45deg) translate(-50%, -50%);
+                z-index: 2;
+            }
+
+        }
     }
 }
