build-and-push-about-and-contact-ui

--- a/resources/scss/_contact_screen.scss
+++ b/resources/scss/_contact_screen.scss
@@ -26,60 +26,37 @@
         }
     }
     .contact-screen-container {
-        .accordion {
-            .accordion-item {
-                border: none !important;
-                margin-bottom: 20px !important;
-                .accordion-header {
-                    .accordion-button {
-                        box-shadow: 0 0 0 0 !important;
-                        border: none !important;
-                        border-radius: 10px !important;
-                        font-size: 32px !important;
-                        background-color: #5f27cd;
-                        color: #ffffff;
-                        &.collapsed {
-                            background-color: rgba(136, 138, 133, 0.2) !important;
-                            color: #000000;
-                            &:after {
-                                filter: inherit;
-                            }
-                        }
-                        &:after {
-                            filter: brightness(100);
-                        }
-                    }
-                }
-                .accordion-collapse {
-                    .accordion-body {
-                        margin-top: 20px !important;
-                        padding: 20px !important;
-                        background-color: rgba(136, 138, 133, 0.2) !important;
-                        border-radius: 10px !important;
-                        font-size: 24px;
-                        .link {
-                            color: #5f27cd;
-                            transition: 0.3s all ease-in-out;
+        .contact-box {
+            width: 390px;
+            height: 390px;
 
-                            &:hover {
-                                color: #009432;
-                                transition: 0.3s all ease-in-out;
-                            }
-
-                        }
-                    }
-                }
+            &:nth-child(1) {
+                background-color: #FF0066;
+                border-radius: 30% 70% 59% 41% / 54% 30% 70% 46%;
+            }
+            &:nth-child(2) {
+                background-color: #4834D4;
+                border-radius: 22% 78% 44% 56% / 61% 41% 59% 39%;
+            }
+            &:nth-child(3) {
+                background-color: #EE5A24;
+                border-radius: 30% 70% 59% 41% / 54% 30% 70% 46%;
             }
         }
     }
     .get-in-touch-screen-container {
-        .form-label {
-            font-size: 24px;
+        .maps-wrapper {
+            width: 100%;
+            height: 350px !important;
+            .iframe-container {
+                width: 100%;
+                height: 100%;
+                border: none !important;
+            }
         }
         .form-control {
             background-color: #dee2e6 !important;
             border: 1px solid #dee2e6 !important;
-            font-size: 24px;
             transition: 0.3s all ease-in-out;
 
             &:focus-visible {
@@ -107,7 +84,7 @@
         }
         .form-checkbox[type=checkbox] {
             position: relative;
-            border: 2px solid #e3e3e3;
+            border: 2px solid var(--bs-secondary);
             border-radius: 4px;
             background: none;
             cursor: pointer;
