build-and-push-latest-ui-design

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -12,4 +12,5 @@
 @import "feature_screen";
 @import "about_screen";
 @import "contact_screen";
+@import "course_details_screen";
 @import "footer";
