--- a/resources/scss/_about_screen.scss
+++ b/resources/scss/_about_screen.scss
@@ -49,7 +49,41 @@
         }
     }
     .about-screen-governance {
-        background-color: #5f27cd;
+        background-color: #2491eb;
+        position: relative;
+        .shadow-1 {
+            background-color: hsla(0, 0%, 100%, 0.1);
+            border-radius: 50%;
+            bottom: 50px;
+            display: inline-block;
+            height: 200px;
+            left: -100px;
+            position: absolute;
+            width: 200px;
+            z-index: 1;
+        }
+        .shadow-2 {
+            background-color: hsla(0, 0%, 100%, 0.1);
+            border-radius: 20% 130% 100% 125%;
+            display: inline-block;
+            height: 400px;
+            left: 100px;
+            position: absolute;
+            top: 300px;
+            width: 400px;
+            z-index: 1;
+        }
+        .shadow-3 {
+            background-color: hsla(0, 0%, 100%, 0.1);
+            border-radius: 50%;
+            bottom: -30%;
+            display: inline-block;
+            height: 550px;
+            position: absolute;
+            right: -124px;
+            width: 550px;
+            z-index: 1;
+        }
         .text-small {
             font-size: 15px;
         }
