--- a/resources/scss/_custom_breadcrumb.scss
+++ b/resources/scss/_custom_breadcrumb.scss
@@ -12,7 +12,7 @@
         top: 0;
         bottom: 0;
         align-items: center;
-        background-color: #5f27cd;
+        background-color: #2491eb;
         background-position: 50%;
         background-repeat: no-repeat;
         background-size: cover;
@@ -23,12 +23,45 @@
         &:before {
             position: absolute;
             content: "";
-            border-left: 150px solid #5f27cd;
+            border-left: 150px solid #2491eb;
             border-top: 700px solid transparent;
             right: -150px;
             top: 0;
             background-color: transparent;
-            z-index: 20;
+            z-index: 1;
+        }
+        .shadow-1 {
+            background-color: hsla(0, 0%, 100%, 0.1);
+            border-radius: 50%;
+            bottom: 50px;
+            display: inline-block;
+            height: 200px;
+            left: -100px;
+            position: absolute;
+            width: 200px;
+            z-index: 1;
+        }
+        .shadow-2 {
+            background-color: hsla(0, 0%, 100%, 0.1);
+            border-radius: 20% 130% 100% 125%;
+            display: inline-block;
+            height: 400px;
+            left: 100px;
+            position: absolute;
+            top: 100px;
+            width: 400px;
+            z-index: 1;
+        }
+        .shadow-3 {
+            background-color: hsla(0, 0%, 100%, 0.1);
+            border-radius: 50%;
+            bottom: -30%;
+            display: inline-block;
+            height: 550px;
+            position: absolute;
+            right: -124px;
+            width: 550px;
+            z-index: 1;
         }
     }
     .breadcrumb-left {
