--- a/resources/scss/_course_details_screen.scss
+++ b/resources/scss/_course_details_screen.scss
@@ -60,6 +60,9 @@
         }
     }
 
+    .team-title {
+        font-size: 32px;
+    }
     .team {
         .team-image {
             img {
@@ -83,6 +86,9 @@
         }
     }
 
+    .faqs-title {
+        font-size: 32px;
+    }
     .accordion {
         .accordion-item {
             border: none !important;
