--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -13,4 +13,5 @@
 @import "about_screen";
 @import "contact_screen";
 @import "course_details_screen";
+@import "courses_screen";
 @import "footer";
