--- a/resources/scss/_course_details_screen.scss
+++ b/resources/scss/_course_details_screen.scss
@@ -91,35 +91,36 @@
     }
     .accordion {
         .accordion-item {
-            border: none !important;
+            //border: none !important;
             margin-bottom: 20px !important;
             .accordion-header {
                 .accordion-button {
                     box-shadow: 0 0 0 0 !important;
                     border: none !important;
-                    border-radius: 10px !important;
-                    font-size: 32px !important;
-                    background-color: #5f27cd;
-                    color: #ffffff;
+                    //border-radius: 10px !important;
+                    font-size: 25px !important;
+                    background-color: #ffffff !important;
+                    color: var(--bs-dark);
                     &.collapsed {
-                        background-color: rgba(136, 138, 133, 0.2) !important;
-                        color: #000000;
-                        &:after {
-                            filter: inherit;
-                        }
+                        background-color: #ffffff !important;
+                        color: var(--bs-secondary);
+                        //&:after {
+                        //    filter: inherit;
+                        //}
                     }
-                    &:after {
-                        filter: brightness(100);
-                    }
+                    //&:after {
+                    //    filter: brightness(100);
+                    //}
                 }
             }
             .accordion-collapse {
                 .accordion-body {
-                    margin-top: 20px !important;
-                    padding: 20px !important;
-                    background-color: rgba(136, 138, 133, 0.2) !important;
-                    border-radius: 10px !important;
-                    font-size: 24px;
+                    //margin-top: 20px !important;
+                    //padding: 20px !important;
+                    //background-color: #ffffff !important;
+                    color: var(--bs-secondary);
+                    //border-radius: 10px !important;
+                    font-size: 20px;
                     .link {
                         color: #5f27cd;
                         transition: 0.3s all ease-in-out;
