content-update-of-courses-and-update-links-of-every-pages

--- a/resources/scss/_news_screen.scss
+++ b/resources/scss/_news_screen.scss
@@ -26,6 +26,9 @@
             transition: 0.3s all ease-in-out;
             background-color: rgba(0, 0, 0, 0.20);
         }
+        .new-description {
+            height: 50px;
+        }
     }
     .text-color {
         color: #5f27cd;
