--- a/resources/scss/_custom_breadcrumb.scss
+++ b/resources/scss/_custom_breadcrumb.scss
@@ -4,8 +4,8 @@
     overflow: hidden;
     background-size: cover;
     object-fit: cover;
-    background-position: center center;
-    object-position: center center;
+    background-position: top;
+    object-position: top;
     .breadcrumb-content-left {
         position: absolute;
         left: 0;
