--- a/resources/scss/_custom_breadcrumb.scss
+++ b/resources/scss/_custom_breadcrumb.scss
@@ -6,6 +6,7 @@
     object-fit: cover;
     background-position: top;
     object-position: top;
+
     .breadcrumb-content-left {
         position: absolute;
         left: 0;
@@ -20,6 +21,7 @@
         float: left;
         height: 700px;
         width: 50%;
+
         &:before {
             position: absolute;
             content: "";
@@ -30,6 +32,7 @@
             background-color: transparent;
             z-index: 1;
         }
+
         .shadow-1 {
             background-color: hsla(0, 0%, 100%, 0.1);
             border-radius: 50%;
@@ -41,6 +44,7 @@
             width: 200px;
             z-index: 1;
         }
+
         .shadow-2 {
             background-color: hsla(0, 0%, 100%, 0.1);
             border-radius: 20% 130% 100% 125%;
@@ -52,6 +56,7 @@
             width: 400px;
             z-index: 1;
         }
+
         .shadow-3 {
             background-color: hsla(0, 0%, 100%, 0.1);
             border-radius: 50%;
@@ -63,7 +68,9 @@
             width: 550px;
             z-index: 1;
         }
+
     }
+
     .breadcrumb-left {
         width: 100%;
         height: 550px;
@@ -71,5 +78,30 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
+
+        .breadcrumb {
+            .breadcrumb-item {
+                .text-white {
+                    position: relative;
+                    &:hover {
+                        transition: 0.3s all ease-in-out;
+                        &:before {
+                            width: 100%;
+                        }
+                    }
+                    &:before {
+                        position: absolute;
+                        content: '';
+                        left: 0;
+                        bottom: 0;
+                        width: 0;
+                        height: 2px;
+                        background-color: #FFFFFF;
+                        transition: 0.3s all ease-in-out;
+                    }
+                }
+            }
+        }
+
     }
 }
