--- a/resources/scss/_contact_screen.scss
+++ b/resources/scss/_contact_screen.scss
@@ -29,18 +29,17 @@
         .contact-box {
             width: 390px;
             height: 390px;
+            padding: 0 50px;
+            margin: 5px;
 
             &:nth-child(1) {
                 background-color: #FF0066;
-                border-radius: 30% 70% 59% 41% / 54% 30% 70% 46%;
             }
             &:nth-child(2) {
                 background-color: #4834D4;
-                border-radius: 22% 78% 44% 56% / 61% 41% 59% 39%;
             }
             &:nth-child(3) {
                 background-color: #EE5A24;
-                border-radius: 30% 70% 59% 41% / 54% 30% 70% 46%;
             }
         }
     }
@@ -54,10 +53,14 @@
                 border: none !important;
             }
         }
-        .form-control {
+        .form-control, .form-textarea, .form-select {
             background-color: #dee2e6 !important;
             border: 1px solid #dee2e6 !important;
             transition: 0.3s all ease-in-out;
+            outline: none !important;
+            display: block;
+            width: 100%;
+            border-radius: 5px !important;
 
             &:focus-visible {
                 transition: 0.3s all ease-in-out;
