--- a/resources/scss/_welcome_screen.scss
+++ b/resources/scss/_welcome_screen.scss
@@ -8,6 +8,7 @@
     background-repeat: no-repeat;
     position: relative;
     background-attachment: fixed;
+    padding-top: 78px;
     &:before {
         position: absolute;
         content: '';
