--- a/resources/scss/_course_screen.scss
+++ b/resources/scss/_course_screen.scss
@@ -32,4 +32,15 @@
             }
         }
     }
+    .btn-theme {
+        background-color: #2491eb !important;
+        transition: 0.3s all ease-in-out !important;
+        color: #ffffff !important;
+        border: 1px solid #2491eb !important;
+        &:hover {
+            background-color: #2075bb !important;
+            transition: 0.3s all ease-in-out !important;
+            border: 1px solid #2075bb !important;
+        }
+    }
 }
