--- a/resources/scss/_feature_screen.scss
+++ b/resources/scss/_feature_screen.scss
@@ -16,7 +16,7 @@
             margin: 5px;
 
             &:nth-child(1) {
-                background-color: #3742FA;
+                background-color: #2491eb;
             }
             &:nth-child(2) {
                 background-color: #009432;
