--- a/resources/scss/_courses_screen.scss
+++ b/resources/scss/_courses_screen.scss
@@ -17,5 +17,16 @@
             display: block;
         }
     }
+    .btn-theme {
+        background-color: #2491eb !important;
+        transition: 0.3s all ease-in-out !important;
+        color: #ffffff !important;
+        border: 1px solid #2491eb !important;
+        &:hover {
+            background-color: #2075bb !important;
+            transition: 0.3s all ease-in-out !important;
+            border: 1px solid #2075bb !important;
+        }
+    }
 
 }
