--- a/resources/scss/_welcome_screen.scss
+++ b/resources/scss/_welcome_screen.scss
@@ -1,14 +1,14 @@
 .welcome-screen {
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
     position: relative;
     background-attachment: fixed;
-    padding-top: 78px;
+    padding-top: 150px;
     &:before {
         position: absolute;
         content: '';
@@ -16,10 +16,10 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
+        background-color: rgba(0, 0, 0, 0.4);
     }
     .access-screen {
-        width: 50%;
+        width: 700px;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -29,11 +29,13 @@
             max-width: 600px;
             width: 100%;
             display: block;
+            background-color: rgba(0, 0, 0, 0.5);
+            padding: 50px;
         }
     }
 
     .vocational-screen {
-        width: 50%;
+        width: 700px;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -43,6 +45,8 @@
             max-width: 600px;
             width: 100%;
             display: block;
+            background-color: rgba(0, 0, 0, 0.5);
+            padding: 50px;
         }
     }
 }
