--- a/resources/scss/_header.scss
+++ b/resources/scss/_header.scss
@@ -25,7 +25,7 @@
     .main-menu {
         width: 100%;
         display: flex;
-        justify-content: center;
+        justify-content: end;
         align-items: center;
 
         ul {
