--- a/resources/scss/_custom_breadcrumb.scss
+++ b/resources/scss/_custom_breadcrumb.scss
@@ -4,7 +4,7 @@
     overflow: hidden;
     background-size: cover;
     object-fit: cover;
-    background-position: top;
+    background-position: center;
     object-position: top;
 
     .breadcrumb-content-left {
@@ -71,6 +71,17 @@
 
     }
 
+    .breadcrumb-content-right {
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 65%;
+        z-index: -1;
+        height: 100%;
+        background-size: cover;
+        background-position: top;
+    }
+
     .breadcrumb-left {
         width: 100%;
         height: 550px;
@@ -83,12 +94,15 @@
             .breadcrumb-item {
                 .text-white {
                     position: relative;
+
                     &:hover {
                         transition: 0.3s all ease-in-out;
+
                         &:before {
                             width: 100%;
                         }
                     }
+
                     &:before {
                         position: absolute;
                         content: '';
