--- a/resources/scss/_feature_screen.scss
+++ b/resources/scss/_feature_screen.scss
@@ -15,7 +15,7 @@
             padding: 0 25px;
             margin: 5px;
             background-color: #2491eb;
-            box-shadow: 0 16px 8px 0 $blue-600 inset;
+            @include box-shadow($blue-600)
         }
     }
 }
