--- a/resources/scss/_pathway_screen.scss
+++ b/resources/scss/_pathway_screen.scss
@@ -16,6 +16,15 @@
             }
             tbody {
                 tr {
+                    &:hover {
+                        td {
+                            transition: 0.3s all ease-in-out;
+                            background-color: rgba(36, 145, 235, 0.25);
+                            div {
+                                color: var(--bs-black) !important;
+                            }
+                        }
+                    }
                     td {
                         padding: 18px 0;
                         vertical-align: middle;
@@ -23,15 +32,14 @@
                         transition: 0.3s all ease-in-out;
                         border-bottom: none;
                         width: 50%;
-
-                        &:hover {
-                            div {
-                                transition: 0.3s all ease-in-out;
-                                background-color: rgba(36, 145, 235, 0.25);
-                                color: var(--bs-black) !important;
-                            }
+                        &:first-child {
+                            border-top-left-radius: 0.5rem !important;
+                            border-bottom-left-radius: 0.5rem !important;
                         }
-
+                        &:last-child {
+                            border-top-right-radius: 0.5rem !important;
+                            border-bottom-right-radius: 0.5rem !important;
+                        }
                     }
                 }
             }
