--- a/resources/scss/_welcome_screen.scss
+++ b/resources/scss/_welcome_screen.scss
@@ -4,10 +4,9 @@
     justify-content: center;
     align-items: center;
     background-size: cover;
-    background-position: center center;
+    background-position: top;
     background-repeat: no-repeat;
     position: relative;
-    background-attachment: fixed;
     padding-top: 150px;
     &:before {
         position: absolute;
