--- a/resources/scss/_header.scss
+++ b/resources/scss/_header.scss
@@ -51,13 +51,12 @@
                     .dropdown-custom-menu {
                         position: absolute;
                         transform: rotateX(90deg);
-                        transform-origin: top right;
+                        transform-origin: top left;
                         display: block;
                         padding: 0;
                         margin: 0;
                         top: auto;
                         left: 0;
-                        width: 300px;
                         height: auto;
                         background-color: var(--bs-white);
                         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
