--- a/resources/scss/_header.scss
+++ b/resources/scss/_header.scss
@@ -8,6 +8,10 @@
     background-color: transparent;
     @include transition(all 0.4s linear);
 
+    @media screen and (max-width: 991px) {
+        padding: 0 17px;
+    }
+
     .website-name {
         width: 100%;
         padding: 15px 0;
@@ -22,11 +26,36 @@
         }
     }
 
+    .sidebar-toggle {
+        @include buttonSizeControl(45,100,transparent, #ffffff);
+    }
+
     .main-menu {
         width: 100%;
         display: flex;
         justify-content: end;
         align-items: center;
+
+        @media screen and (max-width: 991px) {
+            position: fixed;
+            top: 0;
+            right: -300px;
+            width: 300px;
+            height: 100vh;
+            z-index: 999;
+            display: block;
+            justify-content: inherit;
+            align-items: inherit;
+            background-color: var(--bs-white);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+            @include transition(0.3s linear);
+
+            &.active {
+                right: 0;
+                @include transition(0.3s linear);
+            }
+
+        }
 
         ul {
             display: inline-block;
@@ -38,36 +67,66 @@
                 float: left;
                 padding: 0 2px;
 
+                @media screen and (max-width: 991px) {
+                    padding: 0;
+                    display: block;
+                    width: 100%;
+
+                    &:nth-child(1) {
+                        height: 75px;
+                    }
+
+                }
+
                 &.dropdown-custom {
                     position: relative;
 
-                    &:hover {
-                        .dropdown-custom-menu {
-                            transform: translateY(0);
-                            transition: transform 0.3s;
+                    @media screen and (min-width: 991px) {
+                        &:hover {
+                            .dropdown-custom-menu {
+                                transform: translateY(0);
+                                transition: transform 0.3s;
+                            }
                         }
                     }
 
                     .dropdown-custom-menu {
                         position: absolute;
                         transform: rotateX(90deg);
-                        transform-origin: top left;
+                        transform-origin: top right;
                         display: block;
                         padding: 0;
                         margin: 0;
                         top: auto;
-                        left: 0;
+                        right: 0;
                         height: auto;
                         background-color: var(--bs-white);
                         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
                         border: 1px solid var(--bs-border-color);
                         transition: transform 0.3s;
 
+                        @media screen and (max-width: 991px) {
+                            position: static;
+                            transform: inherit;
+                            transform-origin: inherit;
+                            width: 100%;
+                            height: 0;
+                            overflow: hidden;
+                            box-shadow: 0 0 0 0;
+                            border: none;
+
+                            &.active {
+                                height: 100%;
+                            }
+
+                        }
+
                         li {
                             list-style: none;
                             padding: 0;
                             margin: 0;
                             width: 100%;
+                            height: auto;
                         }
 
                         .dropdown-item {
@@ -79,6 +138,7 @@
                             text-shadow: none;
 
                             &:hover, &.router-link-exact-active {
+                                background-color: rgba(73, 80, 87, 0.1);
                                 color: #2491eb;
                             }
 
@@ -98,6 +158,35 @@
                     border-bottom: 3px solid transparent;
                     display: inline-block;
                     @include transition(all 0.2s linear);
+
+                    @media screen and (max-width: 991px) {
+                        position: relative;
+                        display: block;
+                        padding: 8px 16px;
+                        color: #555555;
+                        width: 100%;
+                        border: none !important;
+                        text-shadow: none;
+
+                        &:hover, &.router-link-exact-active {
+                            &:before {
+                                width: 100%;
+                                @include transition(all 0.3s linear)
+                            }
+                        }
+
+                        &:before {
+                            position: absolute;
+                            content: '';
+                            left: 0;
+                            bottom: 0;
+                            width: 0;
+                            height: 2px;
+                            background-color: #2491eb;
+                            @include transition(all 0.3s linear)
+                        }
+
+                    }
 
                     &:hover, &:active, &.active,&.router-link-exact-active {
                         color: #2491eb;
@@ -126,6 +215,9 @@
                     text-shadow: none;
                 }
             }
+        }
+        .sidebar-toggle {
+            @include buttonSizeControl(45,100,transparent, #555555);
         }
         .main-menu {
             ul {
