--- a/resources/scss/_custom_breadcrumb.scss
+++ b/resources/scss/_custom_breadcrumb.scss
@@ -43,6 +43,12 @@
             position: absolute;
             width: 200px;
             z-index: 1;
+            @media screen and (max-width: 991px) {
+                width: 150px;
+                height: 150px;
+                bottom: 100px;
+                left: -40px;
+            }
         }
 
         .shadow-2 {
@@ -55,6 +61,14 @@
             top: 100px;
             width: 400px;
             z-index: 1;
+            @media screen and (max-width: 991px) {
+                width: 250px;
+                height: 250px;
+                left: 50px;
+                position: absolute;
+                top: 165px;
+                z-index: 1;
+            }
         }
 
         .shadow-3 {
@@ -67,6 +81,12 @@
             right: -124px;
             width: 550px;
             z-index: 1;
+            @media screen and (max-width: 991px) {
+                width: 250px;
+                height: 250px;
+                bottom: -5%;
+                right: -100px;
+            }
         }
 
     }
