--- a/resources/scss/_header.scss
+++ b/resources/scss/_header.scss
@@ -28,6 +28,7 @@
 
     .sidebar-toggle {
         @include buttonSizeControl(45,100,transparent, #ffffff);
+        font-size: 22px;
     }
 
     .main-menu {
@@ -39,7 +40,7 @@
         @media screen and (max-width: 991px) {
             position: fixed;
             top: 0;
-            right: -300px;
+            left: -300px;
             width: 300px;
             height: 100vh;
             z-index: 999;
@@ -51,7 +52,7 @@
             @include transition(0.3s linear);
 
             &.active {
-                right: 0;
+                left: 0;
                 @include transition(0.3s linear);
             }
 
@@ -107,16 +108,19 @@
 
                         @media screen and (max-width: 991px) {
                             position: static;
-                            transform: inherit;
-                            transform-origin: inherit;
+                            transform: rotateX(90deg);
+                            transform-origin: top right;
                             width: 100%;
-                            height: 0;
                             overflow: hidden;
                             box-shadow: 0 0 0 0;
                             border: none;
+                            transition: 0.3s all ease-in-out;
+                            height: 0;
 
                             &.active {
                                 height: 100%;
+                                transform: translateY(0);
+                                transition: 0.3s all ease-in-out;
                             }
 
                         }
@@ -218,6 +222,7 @@
         }
         .sidebar-toggle {
             @include buttonSizeControl(45,100,transparent, #555555);
+            font-size: 22px;
         }
         .main-menu {
             ul {
