--- a/resources/scss/_course_screen.scss
+++ b/resources/scss/_course_screen.scss
@@ -17,11 +17,17 @@
             background-size: contain;
             background-repeat: no-repeat;
             margin: 10px;
+            @media screen and (max-width: 1200px) {
+                width: 350px;
+            }
             .each-course-img{
                 width: 100%;
                 height: 200px;
                 object-fit: cover;
                 object-position: top;
+                @media screen and (max-width: 1200px) {
+                    height: 350px;
+                }
             }
             .each-course-content{
                 width: 100%;
