--- a/resources/scss/_welcome_screen.scss
+++ b/resources/scss/_welcome_screen.scss
@@ -17,6 +17,11 @@
         height: 100%;
         background-color: rgba(0, 0, 0, 0.4);
     }
+
+    @media screen and (max-width: 1200px) {
+        padding-top: 130px;
+    }
+
     .access-screen {
         width: 700px;
         display: flex;
@@ -30,6 +35,22 @@
             display: block;
             background-color: rgba(0, 0, 0, 0.5);
             padding: 50px;
+            @media screen and (max-width: 1200px) {
+                .h1-lg {
+                    font-size: 32px;
+                }
+                h2 {
+                    font-size: 20px;
+                }
+                .access-screen-description {
+                    font-size: 16px !important;
+                }
+                .btn-outline-light {
+                    @media screen and (max-width: 1200px) {
+                        font-size: 16px !important;
+                    }
+                }
+            }
         }
     }
 
@@ -46,6 +67,22 @@
             display: block;
             background-color: rgba(0, 0, 0, 0.5);
             padding: 50px;
+            @media screen and (max-width: 1200px) {
+                .h1-lg {
+                    font-size: 32px;
+                }
+                h2 {
+                    font-size: 20px;
+                }
+                .access-screen-description {
+                    font-size: 16px !important;
+                }
+                .btn-outline-light {
+                    @media screen and (max-width: 1200px) {
+                        font-size: 16px !important;
+                    }
+                }
+            }
         }
     }
 }
