--- a/resources/scss/_header.scss
+++ b/resources/scss/_header.scss
@@ -14,7 +14,7 @@
 
     .website-name {
         width: 100%;
-        padding: 15px 0;
+        padding: 5px 0 15px 0;
 
         h1 {
             a {
