--- a/resources/scss/_welcome_screen.scss
+++ b/resources/scss/_welcome_screen.scss
@@ -21,6 +21,10 @@
     @media screen and (max-width: 1200px) {
         padding-top: 130px;
     }
+    
+    @media screen and (max-width: ) {
+        
+    }
 
     .access-screen {
         width: 700px;
@@ -29,6 +33,9 @@
         align-items: center;
         height: 695px;
         position: relative;
+        @media screen and (max-width: 768px) {
+            width: 100%;
+        }
         .access-screen-content{
             max-width: 600px;
             width: 100%;
@@ -50,6 +57,9 @@
                         font-size: 16px !important;
                     }
                 }
+            }
+            @media screen and (max-width: 768px) {
+                width: 100%;
             }
         }
     }
