--- a/resources/scss/_course_details_screen.scss
+++ b/resources/scss/_course_details_screen.scss
@@ -4,6 +4,9 @@
         background-color: rgba(36, 145, 235, 0.2);
         .course-details-title {
             font-size: 74px;
+            @media screen and (max-width: 1199px) {
+                font-size: 40px;
+            }
         }
         .btn-primary {
             font-size: 24px !important;
@@ -15,9 +18,15 @@
     .overview {
         .course-details-title {
             font-size: 32px;
+            @media screen and (max-width: 1199px) {
+                font-size: 28px;
+            }
         }
         .course-details-description {
             font-size: 24px;
+            @media screen and (max-width: 1199px) {
+                font-size: 19px;
+            }
         }
         .btn-outline-theme {
             border: 2px solid #5f27cd !important;
@@ -39,9 +48,15 @@
     .architecture {
         .architecture-title {
             font-size: 32px;
+            @media screen and (max-width: 1199px){
+                font-size: 28px;
+            }
         }
         .architecture-description {
             font-size: 24px;
+            @media screen and (max-width: 1199px){
+                font-size: 19px;
+            }
         }
         .architecture-img {
             width: 100%;
@@ -57,6 +72,9 @@
 
     .team-title {
         font-size: 32px;
+        @media screen and (max-width: 1199px) {
+            font-size: 28px;
+        }
     }
     .team {
         .team-image {
