--- a/resources/scss/_courses_screen.scss
+++ b/resources/scss/_courses_screen.scss
@@ -6,6 +6,11 @@
             width: 350px;
             min-width: 350px;
             max-width: 350px;
+            @media screen and (max-width: 1199px) {
+                width: 100%;
+                min-width: 100%;
+                max-width: 100%;
+            }
         }
         .each-data-img {
             width: 350px;
@@ -13,6 +18,16 @@
             object-fit: cover;
             object-position: center;
             display: block;
+            @media screen and (max-width: 1199px) {
+                object-position: top;
+                width: 100%;
+                min-width: 100%;
+                max-width: 100%;
+                height: 450px;
+            }
+            @media screen and (max-width: 991px) {
+                height: 300px;
+            }
         }
     }
 }
