--- a/resources/scss/_award_screen.scss
+++ b/resources/scss/_award_screen.scss
@@ -88,6 +88,9 @@
                     justify-content: center;
                     align-items: center;
                 }
+                @media screen and (max-width: 768px) {
+                    height: 200px;
+                }
                 img{
                     width: 300px;
                     height: 300px;
