--- a/resources/scss/_feature_screen.scss
+++ b/resources/scss/_feature_screen.scss
@@ -9,6 +9,11 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        .fs-4 {
+            @media screen and (max-width: 576px) {
+                font-size: 16px !important;
+            }
+        }
         .each-feature{
             width: 400px;
             height: 400px;
