--- a/resources/scss/_root.scss
+++ b/resources/scss/_root.scss
@@ -5,8 +5,24 @@ body{
 }
 
 
-.h1-lg{font-size: 50px;}
-.h1-md{font-size: 40px;}
+.h1-lg{
+    font-size: 50px;
+    @media screen and (max-width: 768px) {
+        font-size: 40px;
+    }
+    @media screen and (max-width: 576px) {
+        font-size: 35px;
+    }
+}
+.h1-md{
+    font-size: 40px;
+    @media screen and (max-width: 768px) {
+        font-size: 35px;
+    }
+    @media screen and (max-width: 576px) {
+        font-size: 25px;
+    }
+}
 
 
 .text-shadow-sm{ text-shadow: 1px 1px 1px #000000; }
