--- a/resources/scss/_welcome_screen.scss
+++ b/resources/scss/_welcome_screen.scss
@@ -60,6 +60,7 @@
             }
             @media screen and (max-width: 768px) {
                 width: 100%;
+                padding: 30px;
             }
         }
     }
@@ -98,6 +99,10 @@
                         font-size: 16px !important;
                     }
                 }
+            }
+            @media screen and (max-width: 768px) {
+                width: 100%;
+                padding: 30px;
             }
         }
     }
