--- a/resources/scss/_award_screen.scss
+++ b/resources/scss/_award_screen.scss
@@ -119,6 +119,9 @@
                         @media screen and (max-width: 576px) {
                             transform: translate(0, 0);
                         }
+                        @media screen and (max-width: 480px) {
+
+                        }
                     }
                     &:nth-child(2){
                         position: absolute;
