--- a/resources/scss/_about_screen.scss
+++ b/resources/scss/_about_screen.scss
@@ -4,6 +4,7 @@
             height: 800px;
             @media screen and (max-width: 991px) {
                 width: 100%;
+                height: 700px;
             }
             &:before {
                 position: absolute;
@@ -24,6 +25,9 @@
         }
         .breadcrumb-left {
             height: 800px;
+            @media screen and (max-width: 991px) {
+                height: 700px;
+            }
         }
     }
     .breadcrumb-title {
@@ -45,7 +49,16 @@
         }
     }
     .introduction-title {
-        font-size: 32px;
+        font-size: 40px;
+        @media screen and (max-width: 1199px) {
+            font-size: 25px;
+        }
+        @media screen and (max-width: 768px) {
+            font-size: 20px;
+        }
+        @media screen and (max-width: 576px) {
+            font-size: 18px;
+        }
     }
     .contain-box {
         .mission-title, .vision-title {
@@ -59,6 +72,9 @@
         font-size: 24px;
         @media screen and (max-width: 1199px) {
             font-size: 19px;
+        }
+        @media screen and (max-width: 768px) {
+            font-size: 16px;
         }
         &.max-width-70 {
             max-width: 70%;
