--- a/resources/scss/_award_screen.scss
+++ b/resources/scss/_award_screen.scss
@@ -34,6 +34,51 @@
             &.height-auto {
                 min-height: auto;
             }
+            .award-description {
+                height: auto;
+                @media screen and (max-width: 1199px) {
+                    height: 400px;
+                }
+            }
+            .person-image {
+                width: 300px;
+                height: 300px;
+                object-fit: cover;
+                object-position: center;
+                border: 10px solid var(--bs-white);
+                @media screen and (max-width: 1024px) {
+                    width: 250px;
+                    height: 250px;
+                    border: 7px solid var(--bs-white);
+                }
+                @media screen and (max-width: 768px) {
+                    width: 150px;
+                    height: 150px;
+                    border: 5px solid var(--bs-white);
+                }
+                @media screen and (max-width: 480px) {
+                    width: 130px;
+                    height: 130px;
+                }
+                &:nth-child(2) {
+                    margin-left: -100px;
+                    @media screen and (max-width: 768px) {
+                        margin-left: -40px;
+                    }
+                    @media screen and (max-width: 576px) {
+                        margin-left: -60px;
+                    }
+                }
+                &:nth-child(3) {
+                    margin-left: -100px;
+                    @media screen and (max-width: 768px) {
+                        margin-left: -40px;
+                    }
+                    @media screen and (max-width: 576px) {
+                        margin-left: -60px;
+                    }
+                }
+            }
             .award-images{
                 position: relative;
                 display: block;
@@ -42,9 +87,6 @@
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                }
-                @media screen and (max-width: 768px) {
-                    height: 200px;
                 }
                 img{
                     width: 300px;
